# v3ctr-desktop

./: Cargo.toml  readme.md
components/: Cargo.toml
components/src/: lib.rs
src/: main.rs
v3ctr/: Cargo.toml
v3ctr/src/: lib.rs
