[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]


[dependencies]
bevy = { version = "0.15.3" }
bevy_dylib = "0.15.3"

[features]
default = []
dynamic = ["bevy/dynamic_linking"]
